<resources>
    <string name="app_name" translatable="false">Lawrence &amp; Clinics</string>
    <string name="intro">CENTRO DE CITAS MÉDICAS</string>
    <string name="botonIngresar">INGRESAR</string>
    <string name="Nuevo">¿Eres nuevo?</string>
    <string name="registro">Registrarme</string>
    <string name="citas_medicas">Citas médicas</string>
    <string name="agendarCitas">Agregar Cita</string>
    <string name="anularCitas">Anular Cita</string>
    <string name="cita_agenciaCitas">Le permite agregar citas médicas</string>
    <string name="cita_anular">Le permite anular citas médicas</string>
    <string name="info_modificar_cita">Le permite modificar citas médicas</string>
    <string name="ubicacion">Ubicación</string>
    <string name="Encuentranos">¡Encuéntranos!</string>
    <string name="SeleccionarArea">Seleccione el área</string>
    <string name="traumatologia">Traumatología</string>
    <string name="cardiologia">Cardiología</string>
    <string name="pediatria">Pediatría</string>
    <string name="ginecologia">Ginecología</string>
    <string name="obstetricia">Obstetricia</string>
    <string name="alergologia">Alergología</string>
    <string name="dermatologia">Dermatología</string>
    <string name="endocrinologia">Endocrinología</string>
    <string name="SeleccionarHorarios">Seleccione uno de los horarios disponibles</string>
    <string name="BotonSeleccionFecha">SELECCIONAR FECHA</string>
    <string name="NombreDoctor">Lorenzo Gallego, Sergio</string>
    <string name="HorariosArea">Horarios disponibles</string>
    <string name="hora_1">8:00 A.M. - 8:30 A.M.</string>
    <string name="hora_2">8:30 A.M. - 9:00 A.M.</string>
    <string name="hora_3">9:00 A.M. - 9:30 A.M.</string>
    <string name="hora_4">9:30 A.M. - 10:00 A.M.</string>
    <string name="hora_5">10:00 A.M. - 10:30 A.M.</string>
    <string name="hora_6">10:30 A.M. - 11:00 A.M.</string>
    <string name="opcionMenu_ayuda">Ayuda</string>
    <string name="opcionMenu_contacto">Contacto</string>
    <string name="contactarMailTitulo">CONTACTO</string>
    <string name="EnviarMailBoton">Enviar</string>
    <string name="AnularCitaMedica">Anular Cita</string>
    <string name="ModificarCitaMedica">Modificar Cita</string>
    <string name="texto_encabezado_AnularCita">Por favor, introduzca el número de su cédula e indíquenos el motivo de su cancelación.</string>
    <string name="texto_encabezado_ModificarCita">Por favor, introduzca el número de su cédula para poder modificar la cita</string>
    <string name="title_activity_maps">Map</string>
    <string name="listaCitasPendientes">Citas Pendientes</string>
</resources>
